* Fixed wrong "topic title" placeholder in breadcrumb in topic detail page view, now is the real topic title * Optimized display of meta-information for a single reply (right text-align and padding) * Fixed spacing in "Hund" Teaser

--- a/public/wp-content/themes/bg/sass/partial/_sidebar.scss
+++ b/public/wp-content/themes/bg/sass/partial/_sidebar.scss
@@ -98,7 +98,9 @@ a.teaser {
 }
 
 // current author widget
-.widget_currentauthor {
+.widget_currentauthor,
+.teaser-hund,
+{
 	img {
 		margin-bottom: 0.5em;
 	}
